--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
     <title>The Bricks</title>
     <link rel="stylesheet" href="style.css">
 </head>
-    <body onload="draw()">
-        <canvas id="canvas" width="300" height="300"></canvas>
-    </body>
-    <script src="script.js"></script>
+
+<body onload="drawIt();">
+    <canvas id="canvas" width="500" height="800"></canvas>
+</body>
+
+<script src="script.js"></script>
+<script src="jQuery.js"></script>
+
 </html>
