--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 </head>
 
 <body onload="drawIt();">
-    <canvas id="canvas" width="500" height="800"></canvas>
+    <div class="main">
+        <div class="container">
+            <div class="game">
+                <canvas id="canvas" width="500" height="800"></canvas>
+            </div>
+        </div>
+    </div>
 </body>
 
 <script src="script.js"></script>
