--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body onkeydown="starter();">
+<body onkeydown="starter();" onmousedown="starter();">
     <div class="main">
         <div class="container">
             <div class="game">
-                <div class="txt">
+                <div class="txt" id="start">
                     <h1>Press any key to start!</h1>
                 </div>
                 <canvas id="canvas" width="1000" height="800"></canvas>
