--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <title>The Bricks</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="pictures/favicon.ico">
 </head>
 
 <body onkeydown="starter();" onmousedown="starter();">
